Bug 42888 - Another crash loading http://www.koenig-waermepumpen.de/ in FireFox
Summary: Another crash loading http://www.koenig-waermepumpen.de/ in FireFox
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-13 15:24 UTC by Clemens Eisserer
Modified: 2011-11-14 01:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg log with debug=full (1.47 MB, application/x-bzip2)
2011-11-13 15:24 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2011-11-13 15:24:12 UTC
Created attachment 53488 [details]
xorg log with debug=full

Loading koenig-waermepumpen.de in FireFox caused another crash on my 945GM:

Program received signal SIGABRT, Aborted.
0x00e3b416 in __kernel_vsyscall ()
(gdb) bt
#0  0x00e3b416 in __kernel_vsyscall ()
#1  0x415f698f in __GI_raise (sig=6)
    at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#2  0x415f82d5 in __GI_abort () at abort.c:91
#3  0x415ef6a5 in __assert_fail_base (
    fmt=0x4172f8e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", 
    assertion=0x40e0b8 "size && size <= kgem->max_object_size", 
    file=0x40d7a9 "kgem.c", line=1488, function=0x40e6a0 "kgem_create_2d")
    at assert.c:94
#4  0x415ef757 in __GI___assert_fail (
    assertion=0x40e0b8 "size && size <= kgem->max_object_size", 
    file=0x40d7a9 "kgem.c", line=1488, function=0x40e6a0 "kgem_create_2d")
    at assert.c:103
#5  0x0036403b in kgem_create_2d (kgem=0x8ba2ea8, width=1050, height=10000, 
    bpp=32, tiling=1, flags=0) at kgem.c:1488
#6  0x003695a1 in sna_pixmap_move_to_gpu (pixmap=0xb3900008)
    at sna_accel.c:1016
#7  0x00389345 in sna_composite_rectangles (op=0 '\000', dst=0x9016278, 
    color=0x90b3f78, num_rects=1, rects=0x90b3f80) at sna_composite.c:702
#8  0x081495a1 in CompositeRects (op=0 '\000', pDst=0x9016278, 
    color=0x90b3f78, nRect=1, rects=0x90b3f80) at picture.c:1671
#9  0x0814e9fa in ProcRenderFillRectangles (client=0x8d8dbc8) at render.c:1481
#10 0x08149bc4 in ProcRenderDispatch (client=0x8d8dbc8) at render.c:2063
---Type <return> to continue, or q <return> to quit---
#11 0x0807609f in Dispatch () at dispatch.c:432
#12 0x0806431a in main (argc=6, argv=0xbfd17584, envp=0xbfd175a0) at main.c:287
Comment 1 Chris Wilson 2011-11-14 01:31:20 UTC
commit 0c405595fb8739b22569f81f400100b5dfa472cf
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Nov 14 09:27:49 2011 +0000

    sna: Downgrade tiling in order to fit within fence constraints
    
    Fixes a later assert that the fenced size is valid for kgem_create_2d()
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42888
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.