sna: Downgrade tiling in order to fit within fence constraints

Fixes a later assert that the fenced size is valid for kgem_create_2d()

Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42888
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>